--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/player.css">
 </head>
 <body>
+    <p id="player">
+        <span id="play"></span>
+        <span id="prog">
+            <span id="loading"></span>
+            <span class="knob ui-slider-handle"></span>
+        </span>
+        <span id="vol">
+            <span class="knob ui-slider-handle"></span>
+        </span>
+        <span id="time"></span>
+    </p>
 </body>
 <script type="text/javascript" src="http://code.jquery.com/jquery-git.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
