default audio fallback

--- a/index.htm
+++ b/index.htm
@@ -7,20 +7,25 @@
 </head>
 <body>
     <div id="pane">
+    
         <div id="player">
-            <div id="prog">
-                <span id="progknob" class="ui-slider-handle"></span>
-            </div>
-            <span id="time"></span>
-            <div id="ctrls">
-                <a class="button" id="play">Play</a>
-                <div id="volbg">
-                    <div id="vol">
-                        <span id="volknob" class="button ui-slider-handle"></span>
+            <div id="dash">
+                <div id="prog">
+                    <span id="progknob" class="ui-slider-handle"></span>
+                </div>
+                <span id="time"></span>
+                <div id="ctrls">
+                    <a class="button" id="play">Play</a>
+                    <div id="volbg">
+                        <div id="vol">
+                            <span id="volknob" class="button ui-slider-handle"></span>
+                        </div>
                     </div>
                 </div>
             </div>
+            <audio preload="metadata"></audio>
         </div>
+    
     </div>
 </body>
 <script type="text/javascript" src="http://code.jquery.com/jquery-git.js"></script>
