fix cursor disabling; consolidate & refine link/button styles

--- a/index.htm
+++ b/index.htm
@@ -15,14 +15,14 @@
         <div id="player">
             <div id="dash">
                 <div id="prog">
-                    <span id="progknob" class="ui-slider-handle"></span>
+                    <a id="progknob" class="ui-slider-handle"></a>
                 </div>
                 <span id="time"></span>
                 <div id="ctrls">
                     <a class="button" id="play">Play</a>
                     <div id="volbg">
                         <div id="vol">
-                            <span id="volknob" class="button ui-slider-handle"></span>
+                            <a id="volknob" class="button ui-slider-handle"></a>
                         </div>
                     </div>
                 </div>
