add start .menu.button

--- a/index.htm
+++ b/index.htm
@@ -15,14 +15,14 @@
         <div id="player">
             <div id="dash">
                 <div id="prog">
-                    <a id="progknob" class="ui-slider-handle"></a>
+                    <a id="progknob" class="ui-slider-handle" href="javascript:void(0)"></a>
                 </div>
                 <span id="time"></span>
                 <div id="ctrls">
-                    <a class="button" id="play">Play</a>
+                    <a class="button" id="play" href="javascript:void(0)">Play</a>
                     <div id="volbg">
                         <div id="vol">
-                            <a id="volknob" class="button ui-slider-handle"></a>
+                            <a id="volknob" class="button ui-slider-handle" href="javascript:void(0)"></a>
                         </div>
                     </div>
                 </div>
