start adding transcripts

--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
         <div id="menu"></div>
         
         <div id="track">
+            <div id="transcript"></div>
             <div id="player">
                 <div id="dash">
                     <div id="prog">
