locally host jquery & jquery-ui (custom: slider only); include jquery.ui.touch-punch for adding touch event to ui slider (for real touch screens i.e. mobile device)

--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,8 @@
     </div>
     
 </body>
-<script type="text/javascript" src="http://code.jquery.com/jquery-git.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/ui/jquery-ui-git.js"></script>
+<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
+<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
 <script type="text/javascript" src="js/player.js"></script>
 </html>
