add google analytics tracking code

--- a/index.htm
+++ b/index.htm
@@ -41,4 +41,27 @@
 <script type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
 <script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
 <script type="text/javascript" src="js/player.js"></script>
+<script type="text/javascript">
+// add Google tracking code if served on a vam.ac.uk domain
+if(location.host.indexOf('vam.ac.uk') > -1){
+  
+  // track page views
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-376941-10']);
+  _gaq.push(['_setDomainName', 'vam.ac.uk']);
+  _gaq.push(['_trackPageview']);
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+  
+  // track page interactions without relying on refreshing the html page
+  // only works for Flash if Flash paramter wmode = transparent
+  // onmousedown/onmouseup works for Flash, onclick does not
+  document.onmouseup = function() {
+    _gaq.push(['_trackEvent', 'page', 'mouse up']);
+  }
+}
+</script>
 </html>
