replace jQuery-ui slider+touch libraries with superior, faster, lighter Carini Sliders

--- a/index.htm
+++ b/index.htm
@@ -16,14 +16,14 @@
             <div id="player">
                 <div id="dash">
                     <div id="prog">
-                        <a id="progknob" class="ui-slider-handle" href="javascript:void(0)"></a>
+                        <a id="progknob" class="button" href="javascript:void(0)"></a>
                     </div>
                     <span id="time"></span>
                     <div id="ctrls">
                         <a class="button" id="play" href="javascript:void(0)">Play</a>
                         <div id="volbg">
                             <div id="vol">
-                                <a id="volknob" class="button ui-slider-handle" href="javascript:void(0)"></a>
+                                <a id="volknob" class="button" href="javascript:void(0)"></a>
                             </div>
                         </div>
                     </div>
@@ -38,8 +38,6 @@
     
 </body>
 <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
-<script type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
-<script type="text/javascript" src="js/jquery.ui.touch-punch.min.js"></script>
 <script type="text/javascript" src="js/player.js"></script>
 <script type="text/javascript">
 // add Google tracking code if served on a vam.ac.uk domain
