add webapp metas & icons

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+	<meta charset="utf-8" />
+    <meta name="robots" content="noindex" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta name="format-detection" content="telephone=no">
+	<link rel="apple-touch-icon" href="http://www.vam.ac.uk/__data/assets/image/0008/173609/favicon_130.png" />
+	<link rel="apple-touch-startup-image" href="http://www.vam.ac.uk/__data/assets/image/0018/173610/favicon_1024.png" />
+	<link rel="shortcut icon" href="http://www.vam.ac.uk/__data/assets/file/0008/172358/favicon.ico" />
     <title>AudioPlayer</title>
     <link rel="stylesheet" type="text/css" href="css/player.css">
 </head>
