add bare html5 video tag

--- a/index.htm
+++ b/index.htm
@@ -23,6 +23,8 @@
         <div id="track">
             <div id="transcript"></div>
             <div id="player">
+                <audio preload="metadata"></audio>
+                <video preload="metadata"></video>
                 <div id="dash">
                     <div id="prog">
                         <a id="progknob" class="button" href="javascript:void(0)"></a>
@@ -37,7 +39,6 @@
                         </div>
                     </div>
                 </div>
-                <audio preload="metadata"></audio>
             </div>
         </div>
         
