hack to invisibly increase active area of scrubber progknob

--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
                 <video preload="metadata"></video>
                 <div id="dash">
                     <div id="prog">
-                        <a id="progknob" class="button" href="javascript:void(0)"></a>
+                        <a id="progknob" href="javascript:void(0)"><div class="button"></div></a>
                     </div>
                     <span id="time"></span>
                     <div id="ctrls">
