--- a/index.htm
+++ b/index.htm
@@ -50,26 +50,17 @@
 <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
 <script type="text/javascript" src="js/player.js"></script>
 <script type="text/javascript">
-// add Google tracking code if served on a vam.ac.uk domain
-if(location.host.indexOf('vam.ac.uk') > -1){
-  
-  // track page views
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-376941-10']);
-  _gaq.push(['_setDomainName', 'vam.ac.uk']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-  
-  // track page interactions without relying on refreshing the html page
-  // only works for Flash if Flash paramter wmode = transparent
-  // onmousedown/onmouseup works for Flash, onclick does not
-  document.onmouseup = function() {
-    _gaq.push(['_trackEvent', 'page', 'mouse up']);
-  }
+if(location.host.indexOf('vam.ac.uk') > -1 || window.location.hash.indexOf('dev') > -1){
+    var interactiveID = new Date();
+    interactiveID = window.location.host+window.location.pathname+interactiveID.getTime();
+    dataLayer = [{'category':interactiveID}];
+    <!-- Google Tag Manager -->
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-K37JF8');
+    <!-- End Google Tag Manager -->
 }
 </script>
 </html>
